# ffmpeg_sample

./: CMakeLists.txt  bigbuckbunny_640x480.h265  build.sh  decode_video.cpp  demo_player.cpp  fitting.cpp
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
